<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageViewProduct"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/productImage" />

    <TextView
        android:id="@+id/textViewProductName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/productName" />

    <TextView
        android:id="@+id/textViewPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/price" />

</LinearLayout>